# tinygpx

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: gpx_document.h  route.h  waypoint.h
src/: gpx_document.cpp  route.cpp  waypoint.cpp
